# tserj

./: README.md  pyproject.toml  uv-reinstall.sh
streameast/: bot.py  cli.py  cli_tools.py  config.py
tctk/: bot.py  cli.py  config.py  store.py
tests/: test_chatbot.py
tserj/: cli.py
