[project]
name = "tctk"
version = "0.1"
description = ""
readme = "README.md"
authors = [{name = ""}]
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = []
dependencies = [
    "asyncclick",
    "pyyaml",
    "twitchAPI"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
tctk = "tctk.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
